# NeuXS

./: .gitignore  .gitmodules  CMakeLists.txt  FindOpenMC.cmake  README.md
.github/workflows/: workflow.yml
FinalProject/examples/: CMakeLists.txt
FinalProject/include/: timer.cuh
FinalProject/tests/: test_load_openmc.cpp
benchmark/: CMakeLists.txt  reflective_pincell.cu  reflective_pincell.cuh
examples/: CMakeLists.txt  build_geometry.cu  read_cross_section.cpp  set_cross_section_data_structure.cu
include/: cross_section.cuh  cross_section_reader.h  geometry.cuh  input_parser.cuh  material.cuh  memory.cuh  timer.cuh  transport.cuh
scripts/: apply_clang_format.sh  check_clang_format.sh
src/: CMakeLists.txt  cross_section.cu  cross_section_reader.cpp  geometry.cu  material.cu
tests/: CMakeLists.txt  load_neuxs.cpp  memory_test.cu  test_load_openmc.cpp  test_read_cross_section.cpp
